Moving to prettier-java; Adding new problem